- Added visual indicator to the status screen to indicate if the checkpoint quit feature is enabled

##
## Algorithms
##

- Added hash-mode 15100 = Juniper/NetBSD sha1crypt

##
## Improvements
##

- Refactored internal use of esalt from sync with number of salts to sync with number of digests

##
## Bugs
##

- Fixed a problem where --keyspace combined with custom charsets incorrectly displayed an error message
- Fixed a problem where --stdout combined with custom charsets incorrectly displayed an error message
- Fixed a typo that resulted in the minimum password length not being correctly initialized
- Fixed a problem with parsing and displaying -m 7000 = Fortigate (FortiOS) hashes
- Fixed --remove was not applied in case all hashes have been cracked by potfile or weak-hash check
- Fixed a race condition when a session finishes the input-base was freed but accessed afterwards
- Fixed a hash validation error when trying to load Android FDE < 4.3 hashes
- Fixed --outfile-format 11 up to --outfile-format 15: the crack position was not correctly outputted

##
## Technical
##

- Building: Added missing prototypes for atlassian_parse_hash function
- Files: Detect and error when users try to use -r with a parameter which is not a file
- Parameter: Detect and error when users try to use an empty string (length 0) for parameters like --session=
- Parameter: Detect and error when users try to use a non-digit where a digit is expected
- Sessions: Improved string comparison in case user sets --session to "hashcat"

* changes v3.30 -> v3.40:

##
## Features
##

- Added support for loading hccapx files
- Added support for filtering hccapx message pairs using --hccapx-message-pair
- Added support for parsing 7-Zip hashes with LZMA/LZMA2 compression indicator set to a non-zero value
- Added support for decompressing LZMA1/LZMA2 data for -m 11600 = 7-Zip to validate the CRC
- Added support for automatic merge of LM halfes in case --show and --left is used