@@ -39,6 +39,8 @@ int tty_break(void);
 int tty_getchar(void);
 int tty_fix(void);
 
+void compress_terminal_line_length (char *out_buf, const size_t keep_from_beginning, const size_t keep_from_end);
+
 void opencl_info                        (hashcat_ctx_t *hashcat_ctx);
 void opencl_info_compact                (hashcat_ctx_t *hashcat_ctx);
 
