@@ -16,6 +16,7 @@
 #include "outfile.h"
 #include "monitor.h"
 #include "mpsp.h"
+#include "terminal.h"
 #include "status.h"
 
 static const char ST_0000[] = "Initializing";
@@ -292,6 +293,8 @@ char *status_get_hash_target (const hashcat_ctx_t *hashcat_ctx)
       tmp_buf[0] = 0;
 
       ascii_digest ((hashcat_ctx_t *) hashcat_ctx, tmp_buf, HCBUFSIZ_LARGE, 0, 0);
+
+      compress_terminal_line_length (tmp_buf, 17, 6); // 17 = strlen ("Hash.Target....: ")
 
       char *tmp_buf2 = strdup (tmp_buf);
 
